fix the change password top cut off

--- a/web/src/scss/components/shared/NavBar.scss
+++ b/web/src/scss/components/shared/NavBar.scss
@@ -150,7 +150,7 @@
     content: "";
     display: block;
     width: 22px;
-    height: 12px;
+    height: 10px;
     position: absolute;
     background-color: white;
     right: 11px;
